package edu.fiuba.algo3.modelo;

public class Auto extends Vehiculos {
    private String modelo;

    public void mover_vehiculo(Direccion dirrecion){

    }
}
