package edu.fiuba.algo3.modelo;

public class Moto extends Vehiculos {
    private String modelo;

    public void mover_vehiculo(Direccion direccion){

    }

}
